Fixed #26 font weight too low in nav bar

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -152,6 +152,10 @@ pre code, [class*="hljs"]  {
     font-weight: bold;
 }
 
+.nav-site li a {
+    font-weight: normal !important;
+}
+
 
 /* Table Styling */
 
